--- a/custom_components/text_display/manifest.json
+++ b/custom_components/text_display/manifest.json
@@ -2,7 +2,9 @@
   "domain": "text_display",
   "name": "Controller for Text LCD Displays",
   "documentation": "http://localhost",
+  "version": "1.0",  
   "dependencies": [],
   "codeowners": [],
-  "requirements": []
+  "requirements": [],
+  "iot_class" : "assumed_state"  
 }
